es_frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: elastifeed
  name: es-frontend-service
spec:
  selector:
    app: es-frontend
  ports:
    - protocol: TCP
      port: 80 # We map everything to port 80 so we can omit the port in our code
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: elastifeed
  name: es-frontend-deployment
  labels:
    app: es-frontend
spec:
  replicas: 1 # Number of concurrent running instances
  selector:
    matchLabels:
      app: es-frontend
  template:
    metadata:
      labels:
        app: es-frontend
    spec:
      containers:
        - name: es-frontend
          image: quay.io/elastifeed/es-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 # Exposed port
