es_processor.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: elastifeed
  name: es-processor-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-processor
  namespace: elastifeed
spec:
  selector:
    matchLabels:
      app: es-processor
  replicas: 1
  template:
    metadata:
      labels:
        app: es-processor
    spec:
      containers:
        - name: es-processor
          image: quay.io/elastifeed/es-processor:v1.0
          ports:
            - containerPort: 3000
