redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: elastifeed
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-sts
  namespace: elastifeed
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis-service
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:5.0-alpine
          command: ["redis-server", "--appendonly yes"]
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - containerPort: 6379
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: redis
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: local-path
